[project]
name = "claude-visualizer"
version = "0.1.0"
description = "Terminal visualizer for Claude API responses with tool calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.0.0",
    "anthropic>=0.72.0",
]

[project.scripts]
claude-visualizer = "claude_visualizer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
